// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for delegate 1`] = `
{
  "metrics": Map {
    "DelegateFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "ProgramNamespace.Program",
      "toClassName": "MyDelegate",
      "toFile": "DelegateFile.cs",
      "toNamespace": "DelegateNamespace.MyDelegate",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for enums 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "EnumClass",
      "toNamespace": "NamespaceEnumA.EnumClass",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "DaysOfWeekB",
      "toNamespace": "NamespaceEnumB.DaysOfWeekB",
      "toFile": "ClassB.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "DaysOfWeek",
      "toNamespace": "NamespaceEnumA.EnumClass.DaysOfWeek",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for extended class 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFile": "Main.cs",
      "fromNamespace": "Programm.Program",
      "toClassName": "ClassA",
      "toFile": "ClassA.cs",
      "toNamespace": "NamespaceA.ClassA",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromFile": "ClassA.cs",
      "fromNamespace": "NamespaceA.ClassA",
      "toClassName": "ClassB",
      "toFile": "ClassB.cs",
      "toNamespace": "NamespaceB.ClassB",
      "usageType": "extends",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for generics 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassC.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ClassD.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "GenericClass.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "Program.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 4,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "ClassANamespace.ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassD",
      "fromNamespace": "ClassDNamespace.ClassD",
      "fromFile": "ClassD.cs",
      "toClassName": "ClassB",
      "toNamespace": "ClassBNamespace.ClassB",
      "toFile": "ClassB.cs",
      "usageType": "extends",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassC",
      "toNamespace": "ClassCNamespace.ClassC",
      "toFile": "ClassC.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "ClassD",
      "toNamespace": "ClassDNamespace.ClassD",
      "toFile": "ClassD.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromNamespace": "mainNamespace.Program",
      "fromFile": "Program.cs",
      "toClassName": "GenericClass",
      "toNamespace": "GenericClassNamespace.GenericClass",
      "toFile": "GenericClass.cs",
      "usageType": "usage",
    },
    {
      "fromClassName": "GenericClass",
      "fromNamespace": "GenericClassNamespace.GenericClass",
      "fromFile": "GenericClass.cs",
      "toClassName": "ClassB",
      "toNamespace": "ClassBNamespace.ClassB",
      "toFile": "ClassB.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for global classes without namespace 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "NoNamespaceDefinition",
      "fromNamespace": "NoNamespaceDefinition",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for global namespaces without import 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "NoImport",
      "fromNamespace": "NoImport",
      "fromFile": "Program.cs",
      "toClassName": "ClassA",
      "toNamespace": "NamespaceA.ClassA",
      "toFile": "ClassA.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for interface 1`] = `
{
  "metrics": Map {
    "Programm.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
    "TheInterfaceFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFile": "Programm.cs",
      "fromNamespace": "mainNamespace.Program",
      "toClassName": "TheInterface",
      "toFile": "TheInterfaceFile.cs",
      "toNamespace": "theInterfaceNamespace.TheInterface",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for multiple method calls 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "MultipleMethodCalls",
      "fromFile": "Program.cs",
      "fromNamespace": "mainNamespace.MultipleMethodCalls",
      "toClassName": "ClassA",
      "toFile": "ClassA.cs",
      "toNamespace": "NamespaceA.ClassA",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for multiple types in a file 1`] = `
{
  "metrics": Map {
    "ImplementedClassFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Programm.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "ClassAsReturnType",
      "fromFile": "Programm.cs",
      "fromNamespace": "mainNamespace.ClassAsReturnType",
      "toClassName": "ImplementClass",
      "toFile": "ImplementedClassFile.cs",
      "toNamespace": "implementClassNamespace.ImplementClass",
      "usageType": "usage",
    },
    {
      "fromClassName": "DoThing",
      "fromFile": "Programm.cs",
      "fromNamespace": "mainNamespace.DoThing",
      "toClassName": "ImplementClass",
      "toFile": "ImplementedClassFile.cs",
      "toNamespace": "implementClassNamespace.ImplementClass",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFile": "Programm.cs",
      "fromNamespace": "mainNamespace.Program",
      "toClassName": "ImplementClass",
      "toFile": "ImplementedClassFile.cs",
      "toNamespace": "implementClassNamespace.ImplementClass",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for nested folder structure 1`] = `
{
  "metrics": Map {
    "BlubController.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "Library\\FunctionCalls.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 2,
      "instability": 0.5,
      "outgoing_dependencies": 2,
    },
    "Library\\IAnotherParameterTypes.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Library\\IParameterTypes.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "Library\\MyCustomArgumentNullException.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Library\\ObjectCreations.cs" => {
      "coupling_between_objects": 5,
      "incoming_dependencies": 1,
      "instability": 0.8,
      "outgoing_dependencies": 4,
    },
    "Library\\ParameterTypes.cs" => {
      "coupling_between_objects": 5,
      "incoming_dependencies": 3,
      "instability": 0.4,
      "outgoing_dependencies": 2,
    },
    "Library\\ParameterTypesSpecialized.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "ParameterTypes",
      "fromFile": "Library\\ParameterTypes.cs",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "toClassName": "FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerOne1",
      "fromFile": "BlubController.cs",
      "fromNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "toClassName": "FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerOne2",
      "fromFile": "BlubController.cs",
      "fromNamespace": "App.CouplingExamplesOne.BlubControllerOne2",
      "toClassName": "FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerTwo1",
      "fromFile": "BlubController.cs",
      "fromNamespace": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "toClassName": "FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "usageType": "usage",
    },
    {
      "fromClassName": "BlubControllerTwo2",
      "fromFile": "BlubController.cs",
      "fromNamespace": "App.CouplingExamplesTwo.BlubControllerTwo2",
      "toClassName": "FunctionCalls",
      "toFile": "Library\\FunctionCalls.cs",
      "toNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "usageType": "usage",
    },
    {
      "fromClassName": "IParameterTypes",
      "fromFile": "Library\\IParameterTypes.cs",
      "fromNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "toClassName": "IAnotherParameterTypes",
      "toFile": "Library\\IAnotherParameterTypes.cs",
      "toNamespace": "App.CouplingExamples.Library.IAnotherParameterTypes",
      "usageType": "implements",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toClassName": "IParameterTypes",
      "toFile": "Library\\IParameterTypes.cs",
      "toNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypesSpecialized",
      "fromFile": "Library\\ParameterTypesSpecialized.cs",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypesSpecialized",
      "toClassName": "IParameterTypes",
      "toFile": "Library\\IParameterTypes.cs",
      "toNamespace": "App.CouplingExamples.Library.IParameterTypes",
      "usageType": "implements",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toClassName": "MyCustomArgumentNullException",
      "toFile": "Library\\MyCustomArgumentNullException.cs",
      "toNamespace": "App.CouplingExamples.Library.MyCustomArgumentNullException",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypes",
      "fromFile": "Library\\ParameterTypes.cs",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "toClassName": "ObjectCreations",
      "toFile": "Library\\ObjectCreations.cs",
      "toNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromFile": "Library\\FunctionCalls.cs",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toClassName": "ParameterTypes",
      "toFile": "Library\\ParameterTypes.cs",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toClassName": "ParameterTypes",
      "toFile": "Library\\ParameterTypes.cs",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "usageType": "usage",
    },
    {
      "fromClassName": "ParameterTypesSpecialized",
      "fromFile": "Library\\ParameterTypesSpecialized.cs",
      "fromNamespace": "App.CouplingExamples.Library.ParameterTypesSpecialized",
      "toClassName": "ParameterTypes",
      "toFile": "Library\\ParameterTypes.cs",
      "toNamespace": "App.CouplingExamples.Library.ParameterTypes",
      "usageType": "extends",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromFile": "Library\\FunctionCalls.cs",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toClassName": "BlubControllerOne1",
      "toFile": "BlubController.cs",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toClassName": "BlubControllerOne1",
      "toFile": "BlubController.cs",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne1",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromFile": "Library\\FunctionCalls.cs",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toClassName": "BlubControllerOne2",
      "toFile": "BlubController.cs",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne2",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toClassName": "BlubControllerOne2",
      "toFile": "BlubController.cs",
      "toNamespace": "App.CouplingExamplesOne.BlubControllerOne2",
      "usageType": "usage",
    },
    {
      "fromClassName": "FunctionCalls",
      "fromFile": "Library\\FunctionCalls.cs",
      "fromNamespace": "App.CouplingExamples.Library.FunctionCalls",
      "toClassName": "BlubControllerTwo1",
      "toFile": "BlubController.cs",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toClassName": "BlubControllerTwo1",
      "toFile": "BlubController.cs",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo1",
      "usageType": "usage",
    },
    {
      "fromClassName": "ObjectCreations",
      "fromFile": "Library\\ObjectCreations.cs",
      "fromNamespace": "App.CouplingExamples.Library.ObjectCreations",
      "toClassName": "BlubControllerTwo2",
      "toFile": "BlubController.cs",
      "toNamespace": "App.CouplingExamplesTwo.BlubControllerTwo2",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static class using 1`] = `
{
  "metrics": Map {
    "ClassA_And_B.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "ClassB",
      "toNamespace": "StaticUsedNamespace.ClassB",
      "toFile": "ClassA_And_B.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static method call in for loop 1`] = `
{
  "metrics": Map {
    "ClassA.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassB.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 2,
      "instability": 0.3333333333333333,
      "outgoing_dependencies": 1,
    },
    "ClassC.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 2,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Program.cs" => {
      "coupling_between_objects": 3,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 3,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "ProgramNamespace.Program",
      "toClassName": "ClassA",
      "toFile": "ClassA.cs",
      "toNamespace": "ClassANamespace.ClassA",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromFile": "ClassA.cs",
      "fromNamespace": "ClassANamespace.ClassA",
      "toClassName": "ClassB",
      "toFile": "ClassB.cs",
      "toNamespace": "ClassBNamespace.ClassB",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "ProgramNamespace.Program",
      "toClassName": "ClassB",
      "toFile": "ClassB.cs",
      "toNamespace": "ClassBNamespace.ClassB",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassB",
      "fromFile": "ClassB.cs",
      "fromNamespace": "ClassBNamespace.ClassB",
      "toClassName": "ClassC",
      "toFile": "ClassC.cs",
      "toNamespace": "ClassCNamespace.ClassC",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "ProgramNamespace.Program",
      "toClassName": "ClassC",
      "toFile": "ClassC.cs",
      "toNamespace": "ClassCNamespace.ClassC",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static system.console.writeline using 1`] = `
{
  "metrics": Map {
    "System.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "Main.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromNamespace": "Programm.Program",
      "fromFile": "Main.cs",
      "toClassName": "Console",
      "toNamespace": "System.Console",
      "toFile": "System.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for static using 1`] = `
{
  "metrics": Map {
    "Classes.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
    "ProgramFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
        "fromClassName": "ProgramClass",
        "fromNamespace": "ProgramNamespace.ProgramClass",
        "fromFile": "ProgramFile.cs",
        "toClassName": "ClassA",
        "toNamespace": "StaticUsedNamespace.ClassA",
        "toFile": "Classes.cs",
        "usageType": "usage",
    },
    {
      "fromClassName": "ProgramClass",
      "fromNamespace": "ProgramNamespace.ProgramClass",
      "fromFile": "ProgramFile.cs",
      "toClassName": "ClassB",
      "toNamespace": "NormalUsedNamespace.ClassB",
      "toFile": "Classes.cs",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for struct 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
    "StructFile.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "CsharpStruct.Program",
      "toClassName": "Employee",
      "toFile": "StructFile.cs",
      "toNamespace": "StructNamespace.Employee",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for two namespace containing the same class name 1`] = `
{
  "metrics": Map {
    "Programm.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 1,
    },
    "TwoNamespaceWithSameClassName.cs" => {
      "coupling_between_objects": 1,
      "incoming_dependencies": 1,
      "instability": 0,
      "outgoing_dependencies": 0,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFile": "Programm.cs",
      "fromNamespace": "mainNamespace.Program",
      "toClassName": "SameClass",
      "toFile": "TwoNamespaceWithSameClassName.cs",
      "toNamespace": "NumberOne.SameClass",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFile": "Programm.cs",
      "fromNamespace": "mainNamespace.Program",
      "toClassName": "SameClass",
      "toFile": "TwoNamespaceWithSameClassName.cs",
      "toNamespace": "NumberTwo.SameClass",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of class in the same file 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "mainNamespace.Program",
      "toClassName": "DoThing",
      "toFile": "Program.cs",
      "toNamespace": "mainNamespace.DoThing",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of delegates in class in the same file 1`] = `
{
  "metrics": Map {
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "Mainy",
      "fromFile": "Program.cs",
      "fromNamespace": "DelegateNamespace.Mainy",
      "toClassName": "MyDelegate",
      "toFile": "Program.cs",
      "toNamespace": "DelegateNamespace.MyDelegate",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > for usage of interface in class method in the same file 1`] = `
{
  "metrics": Map {
    "ClassToInterface.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
  },
  "relationships": [
    {
      "fromClassName": "OtherProgram",
      "fromFile": "ClassToInterface.cs",
      "fromNamespace": "ClassToInterfaceNamespace.OtherProgram",
      "toClassName": "MyInterface",
      "toFile": "ClassToInterface.cs",
      "toNamespace": "ClassToInterfaceNamespace.MyInterface",
      "usageType": "usage",
    },
    {
      "fromClassName": "FirstInterface",
      "fromFile": "Program.cs",
      "fromNamespace": "mainNamespace.FirstInterface",
      "toClassName": "SecondInterface",
      "toFile": "Program.cs",
      "toNamespace": "mainNamespace.SecondInterface",
      "usageType": "usage",
    },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > when the code contains extension method 1`] = `
{
  "metrics": Map {
  "ExtensionMethod.cs" => {
        "coupling_between_objects": 2,
        "incoming_dependencies": 1,
        "instability": 0.5,
        "outgoing_dependencies": 1,
      },
  "Program.cs" => {
          "coupling_between_objects": 1,
          "incoming_dependencies": 0,
          "instability": 1,
          "outgoing_dependencies": 1,
        },
  "Enum.cs" => {
            "coupling_between_objects": 1,
            "incoming_dependencies": 1,
            "instability": 0,
            "outgoing_dependencies": 0,
          },
  },
  "relationships": [
  {
        "fromClassName": "ExtensionMethods2",
        "fromNamespace": "mainNamespace.ExtensionMethods2",
        "fromFile": "Program.cs",
        "toClassName": "MyExtensions",
        "toNamespace": "ExtensionMethods.MyExtensions",
        "toFile": "ExtensionMethod.cs",
        "usageType": "usage",
      },
  {
          "fromClassName": "MyExtensions",
          "fromNamespace": "ExtensionMethods.MyExtensions",
          "fromFile": "ExtensionMethod.cs",
          "toClassName": "EnumType",
          "toNamespace": "EnumNamespace.EnumType",
          "toFile": "Enum.cs",
          "usageType": "usage",
        },
  ],
}
`;

exports[`C# metric tests > parsing C# dependencies should calculate the right dependencies and coupling metrics > when the code contains type conversion 1`] = `
{
  "metrics": Map {
    "ClassAFile.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 1,
      "instability": 0.5,
      "outgoing_dependencies": 1,
    },
    "ClassBFile.cs" => {
      "coupling_between_objects": 4,
      "incoming_dependencies": 3,
      "instability": 0.25,
      "outgoing_dependencies": 1,
    },
    "Program.cs" => {
      "coupling_between_objects": 2,
      "incoming_dependencies": 0,
      "instability": 1,
      "outgoing_dependencies": 2,
    },
  },
  "relationships": [
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "ProgramNamespace.Program",
      "toClassName": "ClassA",
      "toFile": "ClassAFile.cs",
      "toNamespace": "classANamespace.ClassA",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "ProgramNamespace.Program",
      "toClassName": "ClassAFactory",
      "toFile": "ClassBFile.cs",
      "toNamespace": "classBNamespace.ClassAFactory",
      "usageType": "usage",
    },
    {
      "fromClassName": "Program",
      "fromFile": "Program.cs",
      "fromNamespace": "ProgramNamespace.Program",
      "toClassName": "ClassB",
      "toFile": "ClassBFile.cs",
      "toNamespace": "classBNamespace.ClassB",
      "usageType": "usage",
    },
    {
      "fromClassName": "ClassA",
      "fromFile": "ClassAFile.cs",
      "fromNamespace": "classANamespace.ClassA",
      "toClassName": "ClassB",
      "toFile": "ClassBFile.cs",
      "toNamespace": "classBNamespace.ClassB",
      "usageType": "extends",
    },
    {
      "fromClassName": "ClassAFactory",
      "fromFile": "ClassBFile.cs",
      "fromNamespace": "classBNamespace.ClassAFactory",
      "toClassName": "ClassB",
      "toFile": "ClassBFile.cs",
      "toNamespace": "classBNamespace.ClassB",
      "usageType": "usage",
    },
  ],
}
`;
